# mpmp-emu

./: Cargo.toml  README.md
helpers/: alu_test.s  fib.s  generate_test_code.py  hex_to_rust_array.py  ldc_test.s  test.hex  test.s
helpers/assembly/: all_instructions.s  fib.s  fib_extended.s  hello_world.s  jmp_test.s  output.hex  tty_test.s  tty_test_abc.s  tty_test_abc_endless.s  tty_test_io.s
helpers/hex/: alu_test.hex  fib.hex  fib_extended.hex  hello_world.hex  output.hex  tty_test.hex  tty_test_io.hex
src/: decoder.rs  hex_parser.rs  ir.rs  main.rs  program.rs  runtime.rs  state.rs  util.rs
src/backend/: decoder.rs  hex_parser.rs  ir.rs  mod.rs  program.rs  runtime.rs
src/frontend/: app.rs  frontend_tui.rs  log.rs  mod.rs  pmem.rs  ram.rs  registers.rs
src/frontend/widgets/: help_screen.rs  keybuffer.rs  log.rs  mod.rs  pmem.rs  prompt.rs  ram.rs  registers.rs  terminal.rs
