[package]
name = "mpmp-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"

# We use these to make working with our big Opcode enum defined
# in decoder.rs easier
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"

rand = "0.8"

# For TUI
ratatui = { version = "0.22.0", features = ["all-widgets"] }
crossterm = "0.28"

# For fiddling with timestamps
chrono = "0.4"
